# proof-craft

./: README.md
halo2playground/zkqip/: Cargo.toml
halo2playground/zkqip/benches/: quant_bench.rs
halo2playground/zkqip/src/: main.rs  simple_quant.rs
halo2playground/zkqip/tests/: quantized_tests.rs
halo2template/: Cargo.toml
halo2template/src/: main.rs
merkletree/: Cargo.toml  README.md
merkletree/benches/: merkle_tree_benchmarks.rs
merkletree/src/: hash.rs  lib.rs  main.rs  merkle_tree.rs
merkletree/src/examples/: demo.rs
